change from POST to GET.  Expose URLS.

--- a/api/app/templates/phrases/copying.html
+++ b/api/app/templates/phrases/copying.html
@@ -14,7 +14,7 @@
     <h2>Phrase Copy Practice</h2>
     
 
-    <form method="POST" id='theForm'>
+    <form method="GET" id='theForm'>
         WPM: 
         <select name="wpm" id="wpm" style="width: 95px;" >
             {% for wpmo in wpm_options %}
