--- a/api/app/templates/base.html
+++ b/api/app/templates/base.html
@@ -103,6 +103,7 @@
 											<ul>
 												<li><a href="/books/winnie">Winnie The Pooh</a></li>
 												<li><a href="/books/garden">A Childs Garden of Verses</a></li>
+												<li><a href="/books/wisteria">Sherlock Holmes: Wisteria Lodge</a></li>
 											</ul>	
 										</li>			
 
