--- a/api/app/templates/books/garden.html
+++ b/api/app/templates/books/garden.html
@@ -49,7 +49,7 @@
       max-width: 600px; 
       width:100%; height: 
       400px; " >
-    <PRE style="padding: 10px; font-size: 1.1em; font-family:Arial, Helvetica, sans-serif">{{verseText}}</PRE>
+    <div style="padding: 10px; font-weight:normal; font-family:Arial, Helvetica, sans-serif">{{verseText | replace('\n', '<br>') | safe}}</DIV>
   </div>
   
   <script>
