remove zoom links

--- a/api/app/templates/utility/licw_classes.html
+++ b/api/app/templates/utility/licw_classes.html
@@ -60,7 +60,7 @@
             {% endfor %}    
         </select> 
         
-        <input type="submit" value="Go">
+        <input type="submit" value="Create List">
         </div>
     </form>
     <div class="content">
