--- a/api/app/templates/base.html
+++ b/api/app/templates/base.html
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/static/{{ site_template }}/assets/css/main.css" />
 		<link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
-		<script src="https://fkurz.net/ham/jscwlib/src/jscwlib.js"></script>
+		<script src="/static/js/jscwlib.js"></script>
 		<style>
         .line-display {
             margin-top: 20px;
