--- a/api/app/templates/base.html
+++ b/api/app/templates/base.html
@@ -96,7 +96,7 @@
 										<li><a href="/">Home</a></li>
 										<li><a href="/phrases">Phrase Copy Practice</a></li>
 										<li><a href="/phrases/sending">Phrase Sending Practice</a></li>
-										<li><a href="/phrases/ttr">Word Flow/TTR</a></li>
+										<li><a href="/phrases/ttr2">Word Flow/TTR</a></li>
 										<li><a href="/callsigns/trainer">Callsign Trainer</a></li>
 										<li>
 											<span class="opener">Books</span>
