make ttr url the ttr2 version

--- a/api/app/templates/phrases/ttr2.html
+++ b/api/app/templates/phrases/ttr2.html
@@ -70,7 +70,7 @@
         Set the word collection, WPM, and word spacing so that you are missing some but not all of the words as they flow by. 
         That difficulty level will be the sweet spot for improving IFR.  
         <BR><BR>    
-        <a href="/phrases/ttr">Version 1</a> is also available.   
+        <a href="/phrases/ttr1">Version 1</a> is also available.   
     </div>
 
 
