--- a/api/app/templates/phrases/ttr2.html
+++ b/api/app/templates/phrases/ttr2.html
@@ -32,7 +32,7 @@
         </select>    
 
 
-        Repititions: <select name="repititions" id="repititions" style="width: 150px;" >
+        Repetitions: <select name="repititions" id="repititions" style="width: 150px;" >
             <option value="1">1</option>
             <option value="2" {% if attr['repititions'] == '2' %} selected {% endif %}>2</option>
             <option value="3" {% if attr['repititions'] == '3' %} selected {% endif %}>3</option>
@@ -56,19 +56,19 @@
         <div class="line-display" id="reveal_title" style="display:block; font-size: 3em; padding: 5px; float: left; color: white" >|</div>    
     </div>
     <div style="margin: 5px; float: left; border: 1px solid black; padding: 3px; background-color: #eeeeee; max-width: 600px;" >
-        <H2>Word Flow IFR / TTR Version 2</H2>
-        This is an Instant Flow Recovery (IFR) exercise. Go with the flow. Focus on forward motion.   
+        <H2>Word Flow / TTR Version 2</H2>
+        This is a word discovery exercise. Go with the flow. Focus on forward motion.   
         If a word is missed, ignore it. Focus on catching the next word. 
         Because the words are presented randomly, and without context, you may find this to be 
-        a good environment for improving your IFR. <BR><BR>
+        a good environment for improving your word discovery. <BR><BR>
 
 
         The initial setting is 20 wpm with standard word spacing. At 20 wpm, the standard space between words is 420 milliseconds. 
         <BR><BR>
-        If you change the repititions to 2 or 3, you may confirm your recognition by listening again.
+        If you change the repetitions to 2 or 3, you may confirm your recognition by listening again.
         <BR><BR>            
         Set the word collection, WPM, and word spacing so that you are missing some but not all of the words as they flow by. 
-        That difficulty level will be the sweet spot for improving IFR.  
+        That difficulty level will be the sweet spot for improving word discovery.  
         <BR><BR>    
         <a href="/phrases/ttr1">Version 1</a> is also available.   
     </div>
