Proof read text

--- a/api/app/templates/phrases/phrase-flow.html
+++ b/api/app/templates/phrases/phrase-flow.html
@@ -60,7 +60,7 @@
         <button id="buttonPlayCW"  ">Play</button>
         <button id="buttonStopCW"  ">Stop</button>
         <BR>
-        <button id="buttonDisplayTitle" style="visibility: visible;">Reveal the {{selected_category}}</button>
+        <button id="buttonDisplayTitle" style="visibility: visible;">Reveal the {{selected_category}}</button><BR>
         <button id="buttonHideTitle" style="visibility: hidden;">Hide the {{selected_category}}</button>
         <BR>    
         <div class="line-display" id="reveal_title" style="display:none;  padding: 5px; float: left;" ></div>    
@@ -71,8 +71,9 @@
         If a word is missed, ignore it. Focus on catching the next word. 
         <BR><BR>
 
-        The initial setting is 20 wpm with standard word spacing. At 20 wpm, the standard space between words is 420 milliseconds. 
+            The initial setting is 20 wpm with standard word spacing (420 milliseconds). 
         <BR><BR>            
+
         Set the phrase collection, WPM, and word spacing so that you are missing some but not all of the words as they flow by. 
         That difficulty level will be the sweet spot for improving your flow recovery skills.  
         <BR><BR>    
