--- a/api/app/templates/phrases/ttr2.html
+++ b/api/app/templates/phrases/ttr2.html
@@ -13,7 +13,7 @@
 <script src="api/app/static/js/jscwlib.js"></script>
 
 <div class="content" >
-    <h2>Word flow/TTR</h2>
+    <h2>Word Discovery/TTR</h2>
     
     <div style="float: left">
         <form method="GET" id='theForm' >
@@ -56,14 +56,13 @@
         <div class="line-display" id="reveal_title" style="display:block; font-size: 3em; padding: 5px; float: left; color: white" >|</div>    
     </div>
     <div style="margin: 5px; float: left; border: 1px solid black; padding: 3px; background-color: #eeeeee; max-width: 600px;" >
-        <H2>Word Flow / TTR Version 2</H2>
+        <H2>Word Discovery / TTR Version 2</H2>
         This is a word discovery exercise. Go with the flow. Focus on forward motion.   
         If a word is missed, ignore it. Focus on catching the next word. 
         Because the words are presented randomly, and without context, you may find this to be 
         a good environment for improving your word discovery. <BR><BR>
 
-
-        The initial setting is 20 wpm with standard word spacing. At 20 wpm, the standard space between words is 420 milliseconds. 
+        The initial setting is 20 wpm with standard word spacing (420 milliseconds). 
         <BR><BR>
         If you change the repetitions to 2 or 3, you may confirm your recognition by listening again.
         <BR><BR>            
